--- a/debian/control.in
+++ b/debian/control.in
@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 6),
     libgtk2.0-dev, libgnomeprintui2.2-dev,
     gettext, autoconf, libboost-python-dev,
     texlive-lang-cyrillic
+Build-Recommends: libmodbus-dev (>= 3.0)
 Standards-Version: 2.1.0
 
 Package: @MAIN_PACKAGE_NAME@-dev
